NetBSD Problem Report #50533

From www@NetBSD.org  Fri Dec 11 10:44:30 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id F2880A667D
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 10:44:29 +0000 (UTC)
Message-Id: <20151211104425.069C0A6684@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 10:44:25 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/dev/marvell/mvspi.c:268: bad if test ?
X-Send-Pr-Version: www-1.0

>Number:         50533
>Category:       kern
>Synopsis:       src/sys/dev/marvell/mvspi.c:268: bad if test ?
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Dec 11 10:45:00 +0000 2015
>Closed-Date:    Sun Dec 13 20:28:29 +0000 2015
>Last-Modified:  Sun Dec 13 20:28:29 +0000 2015
>Originator:     David Binderman
>Release:        cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/dev/marvell/mvspi.c:268]: (warning) Logical conjunction always evaluates to false: EXPR < 0 && EXPR > 7.

    if (sc->sc_transfer->st_slave < 0 && sc->sc_transfer->st_slave > 7) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50533 CVS commit: src/sys/dev/marvell
Date: Sun, 13 Dec 2015 13:35:26 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Dec 13 18:35:26 UTC 2015

 Modified Files:
 	src/sys/dev/marvell: mvspi.c

 Log Message:
 PR/50533: David Binderman: Fix incorrect logic


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/sys/dev/marvell/mvspi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:28:29 +0000
State-Changed-Why:


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.