PR/50533: David Binderman: Fix incorrect logic